# Nand2Tetris

project1/: hdl.ipynb
project2/: add16.hal  fulladder.hal  halfadder.hal  inc16.hal
project3/: PC.hdl  RAM4K.hdl  RAM512.hdl  RAM64.hdl  RAM8.hal  bit.hal  register.hal
project5/: CPU.hdl  Computer.hdl  Memory.hdl
project6/: Cargo.toml
project6/.zed/: debug.json
project6/benches/: assembler_bench.rs
project6/src/: code.rs  lib.rs  macros.rs  main.rs  parser.rs  symbol_table.rs
project6/tests/: integration_test.rs
projetc7/: Cargo.toml
projetc7/src/: code_writer.rs  main.rs  parser.rs
projetc7/test_data/MemoryAccess/StaticTest/: StaticTest.expected.asm
projetc7/tests/: integration_test.rs
