[package]
name = "project6"
version = "0.1.0"
edition = "2024"

[dependencies]
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "assembler_bench"
harness = false

[profile.release]
opt-level = 3          # Maximum optimization level
lto = "fat"            # Full link-time optimization
codegen-units = 1      # Single codegen unit for better optimization
strip = true           # Strip symbols to reduce binary size
panic = 'abort'        # Abort on panic instead of unwinding
